ICS provider assertion/failure and performance fix (bug 312381); r=mvl